--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ a {
     font-size: 16px;
     line-height: 30px;
 }
+.site-navigation-item a:hover {
+    color: #fb565a
+}
+.site-navigation-item a:active {
+    color: black;
+    border-bottom: 2px solid  #fb565a;
+}
 .basket a {
     text-decoration: none;
     color: black;
@@ -61,6 +68,13 @@ a {
     display: flex;
     padding-left: 245px;
     flex-direction: row-reverse;
+}
+.basket a:hover {
+    color: #fb565a
+}
+.basket a:active {
+    color: black;
+    border-bottom: 2px solid  #fb565a;
 }
 .site-navigation-wrapper {
     display: flex;
@@ -81,7 +95,132 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+.slider-container {
+      width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+      box-sizing: border-box;
+}
+.visually-hidden {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      clip: rect(0, 0, 0, 0);
+}
+.slider {
+  position: relative;
+  background-color: #eeeeee;
+}
 
+.slider-controls {
+  position: absolute;
+  left: 50%;
+  bottom: 104px;
+  z-index: 100;
+
+  width: 160px;
+  height: 18px;
+  text-align: center;
+  font-size: 0;
+  transform: translateX(-50%);
+}
+
+.slider-controls i {
+  position: relative;
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  padding: 8px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.slider-controls i::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  z-index: 1;
+  width: 18px;
+  height: 18px;
+  background: #ffffff;
+  border-radius: 50%;
+}
+.slider-controls .active::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 2;
+  width: 4px;
+  height: 4px;
+  margin: -4px;
+  background-color: inherit;
+  border: 2px solid #c1c1c1;
+  border-radius: 50%;
+}
+.slider-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.slider-item {
+  display: none;
+  padding: 78px 0 80px 0;
+}
+.slider-item:nth-child(2) {
+  display: block;
+}
+.slider-item:nth-child(1) {
+  background-image: url("img/slider-1.jpg");
+  background-repeat: no-repeat;
+  background-position: 93% 18px;
+}
+.slider-item:nth-child(2) {
+  background-image: url("img/slider-2.jpg");
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+}
+.slider-item:nth-child(3) {
+  background-image: url("img/slider-3.jpg");
+  background-repeat: no-repeat;
+  background-position: 100% 20px;
+}
+.slider-item h3 {
+  max-width: 600px;
+  margin: 0;
+  margin-bottom: 27px;
+  font-size: 55px;
+  line-height: 55px;
+  font-weight: 500;
+}
+.slider-item p {
+  max-width: 430px;
+  margin: 0;
+  margin-bottom: 38px;
+}
+.button {
+  display: block;
+  width: 240px;
+  padding: 13px 0;
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  background-color: #fb565a;
+  border-radius: 3px;
+  border: none;
+}
+.button:hover,
+.button:focus {
+  background-color: #e74246;
+}
+.button:active {
+  background-color: #d7373b;
+  color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 3px rgba(0, 0, 0, 0.1) inset;
+}
 .main-content-wrapper {
     width: 1200px;
     padding-left: 20px;
@@ -235,4 +374,7 @@ caption {
     display: flex;
     list-style: none;
     margin-right: 140px;
+}
+.social-list-item {
+  color: gray;
 }
